--- a/src/app/UI/view-models/inicio/inicio.component.html
+++ b/src/app/UI/view-models/inicio/inicio.component.html
@@ -1,48 +1,26 @@
-<style>
-    .card .card-header img {
-        width: 40px;
-        height: 40px;
-    }
-    
-    .card .card-header .card-title {
-        color: #575962;
-        font-size: 18px;
-        padding-top: 3px;
-    }
-    
-    .content .card {
-        margin-bottom: 30px;
-        min-width: 300px;
-        width: 60%;
-        box-shadow: 0px 1px 0px 1px rgb(103 101 109 / 8%);
-        border-radius: 6px;
-    }
-</style>
-<!-- Content -->
-<div class="content">
+<div class="col-9">
+    <!-- Content -->
+    <div class="content">
+        <article class="card card-prof" id="docente">
+            <section class="card-header">
+                <img src="../../../../assets/snoop-dogg.png" class="rounded-circle" alt="Profile picture">
+                <h4 class="card-title m-2">Alexandra Daddario</h4>
+            </section>
+            <section class="card-body">
+                <h6 class="light-green-text accent-3">
+                    <i class="far fa-bell"></i> Update
+                </h6>
+                <h4 class="card-title">Teacher change</h4>
+                <p class="card-text">
+                    Mr. Zac Efron has left the university. Hence,
+                    <span class="purple-text">Miss Alexandra Daddario</span> will be taking his place and teaching
+                    <span class="purple-text">biology</span> this semester.
+                </p>
+            </section>
+            <section class="card-footer text-right">
+                <button class="btn btn-light-green accent-3" data-toggle="modal" data-target="#profileModal">View profile</button>
+            </section>
+        </article>
 
-    <!-- Second card -->
-    <br>
-    <br><br><br>
-    <article class="card">
-        <section class="card-header">
-            <img src="../../../../assets/snoop-dogg.png" class="rounded-circle" alt="Profile picture">
-            <h4 class="card-title m-2">Alexandra Daddario</h4>
-        </section>
-        <section class="card-body">
-            <h6 class="light-green-text accent-3">
-                <i class="far fa-bell"></i> Update
-            </h6>
-            <h4 class="card-title">Teacher change</h4>
-            <p class="card-text">
-                Mr. Zac Efron has left the university. Hence,
-                <span class="purple-text">Miss Alexandra Daddario</span> will be taking his place and teaching
-                <span class="purple-text">biology</span> this semester.
-            </p>
-        </section>
-        <section class="card-footer text-right">
-            <button class="btn btn-light-green accent-3" data-toggle="modal" data-target="#profileModal">View profile</button>
-        </section>
-    </article>
-
+    </div>
 </div>
