--- a/src/app/UI/view-models/responder-preguntas/responder-preguntas.component.html
+++ b/src/app/UI/view-models/responder-preguntas/responder-preguntas.component.html
@@ -1,1 +1,5 @@
-<b>Gerson, aqui te voy a enviar la lista de subtemas y el orden en el que los mostraras</b>
+<div class="col-9">
+
+    <b>Gerson, aqui te voy a enviar la lista de subtemas y el orden en el que los mostraras</b>
+
+</div>
