--- a/src/app/UI/common/navbar/navbar.component.html
+++ b/src/app/UI/common/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse" id="navbarText" style="margin-left: 30%;" *ngIf="!isStudent">
         <!-- <a style="color: #fff">{{ user$ | async | json }}</a> -->
         <ul class="navbar-nav mx-auto">
-            <li class="nav-item active">
+            <!-- <li class="nav-item active">
                 <a class="nav-link" routerLink="/" *ngIf="user">Home</a>
             </li>
             <li class="nav-item active">
@@ -14,7 +14,7 @@
             </li>
             <li class="nav-item active">
                 <a class="nav-link" routerLink="/grados-academicos/Docente" *ngIf="user">Grados</a>
-            </li>
+            </li> -->
             <li class="nav-item" *ngIf="user">
                 <a href="#" class="nav-link" (click)="onLogout()">LogOut</a>
             </li>
