--- a/src/app/UI/view-models/administrar-temas/administrar-temas.component.html
+++ b/src/app/UI/view-models/administrar-temas/administrar-temas.component.html
@@ -1,54 +1,59 @@
-<div class="header">
-    <h1>{{name_curso}}</h1>
-    <div class="row">
-        <div class="col-sm-10">
-        </div>
-        <div class="col-sm-2">
-            <button *ngIf="type_user!='Estudiante'" style="background-color: hsl(212, 86%, 64%) !important" type="button" class="btn btn-success" (click)="openSave(content)">Agregar</button>
+<div class="col-9">
+
+    <div class="header">
+        <h1>{{name_curso}}</h1>
+        <div class="row">
+            <div class="col-sm-10">
+            </div>
+            <div class="col-sm-2">
+                <button *ngIf="type_user!='Estudiante'" style="background-color: hsl(212, 86%, 64%) !important" type="button" class="btn btn-success" (click)="openSave(content)">Agregar</button>
+            </div>
         </div>
     </div>
-</div>
 
-<div class="row1-container" *ngFor="let item of collection">
-    <div class="box blue">
-        <img src="https://assets.codepen.io/2301174/icon-calculator.svg" alt="">
-        <h2>{{item.tema}}</h2>
-        <div class="row">
-            <div *ngIf="type_user!='Estudiante'" class="col-sm-2">
-                <p class="card__apply" (click)="openEditar(content, item)"><a>Editar<i class="fas fa-arrow-right"></i></a></p>
-            </div>
-            <div class="col-sm-3">
-                <p class="card__apply" (click)="navigate(item.id, item.tema, type_user, item.orden)"><a>Ver los subtemas<i class="fas fa-arrow-right"></i></a></p>
-            </div>
-            <!-- <div class="col-sm-6">
+    <div class="row1-container" *ngFor="let item of collection">
+        <div class="box blue">
+            <img src="https://assets.codepen.io/2301174/icon-calculator.svg" alt="">
+            <h2>{{item.tema}}</h2>
+            <div class="row">
+                <div *ngIf="type_user!='Estudiante'" class="col-sm-2">
+                    <p class="card__apply" (click)="openEditar(content, item)"><a>Editar<i class="fas fa-arrow-right"></i></a></p>
+                </div>
+                <div class="col-sm-3">
+                    <p class="card__apply" (click)="navigate(item.id, item.tema, type_user, item.orden)"><a>Ver los subtemas<i class="fas fa-arrow-right"></i></a></p>
+                </div>
+                <!-- <div class="col-sm-6">
                 <button type="button" class="btn btn-danger" (click)="eliminar(item)">Eliminar</button>
             </div> -->
+            </div>
         </div>
     </div>
 </div>
 
 <ng-template #content let-modal>
-    <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title">Estudiante create/update</h4>
-        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+    <div class="col-9">
+
+        <div class="modal-header">
+            <h4 class="modal-title" id="modal-basic-title">Estudiante create/update</h4>
+            <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
             <span aria-hidden="true">&times;</span>
         </button>
-    </div>
-    <div class="modal-body">
-        <form>
-            <div class="form-group">
-                <form [formGroup]="managerForm">
-                    <div class="form-group">
-                        <label>Tema</label>
-                        <input type="text" formControlName="tema" class="form-control">
-                    </div>
-                </form>
-            </div>
-        </form>
-    </div>
-    <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark" (click)="guardarTema()" *ngIf="!actualizar">Guardar</button>
-        <button type="button" class="btn btn-outline-dark" (click)="actualizarTema()"
-            *ngIf="actualizar">Actualizar</button>
+        </div>
+        <div class="modal-body">
+            <form>
+                <div class="form-group">
+                    <form [formGroup]="managerForm">
+                        <div class="form-group">
+                            <label>Tema</label>
+                            <input type="text" formControlName="tema" class="form-control">
+                        </div>
+                    </form>
+                </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-outline-dark" (click)="guardarTema()" *ngIf="!actualizar">Guardar</button>
+            <button type="button" class="btn btn-outline-dark" (click)="actualizarTema()" *ngIf="actualizar">Actualizar</button>
+        </div>
     </div>
 </ng-template>
