--- a/src/app/UI/view-models/home/home.component.scss
+++ b/src/app/UI/view-models/home/home.component.scss
@@ -111,3 +111,30 @@
     top: 31px;
     overflow: visible;
 }
+
+.card .card-header img {
+    width: 40px;
+    height: 40px;
+}
+
+.card .card-header .card-title {
+    color: #575962;
+    font-size: 18px;
+    padding-top: 3px;
+}
+
+.content .card {
+    margin-bottom: 30px;
+    min-width: 300px;
+    width: 60%;
+    box-shadow: 0px 1px 0px 1px rgb(103 101 109 / 8%);
+    border-radius: 6px;
+}
+
+.col-9 {
+    margin-left: 24vw !important;
+    margin-top: -45vw !important;
+    height: 40vw !important;
+    position: absolute;
+    overflow-x: auto;
+}
