--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,6 @@
 <app-navbar></app-navbar>
-<app-sidebar></app-sidebar>
-<div>
-    <!-- <div class="col-md-12" style="100%;padding-left: 12%;">
-        <router-outlet></router-outlet>
-    </div> -->
+<div class="row">
+    <app-sidebar></app-sidebar>
     <router-outlet></router-outlet>
 </div>
 <footer>
