--- a/src/app/UI/view-models/cursos/cursos.component.html
+++ b/src/app/UI/view-models/cursos/cursos.component.html
@@ -2,7 +2,7 @@
 
     <div class="header">
         <h1>5.To grado</h1>
-        <p>{{type_user}}. Aquí tienes una lista de las competencias de matemáticas para los estudiantes en 5.To grado. Estas competencias están clasificadas en categorías</p>
+        <!-- <p>{{type_user}}. Aquí tienes una lista de las competencias de matemáticas para los estudiantes en 5.To grado. Estas competencias están clasificadas en categorías</p> -->
     </div>
     <div class="row1-container" *ngFor="let item of collection">
         <div class="box red">
