--- a/src/app/UI/view-models/grados-academicos/grados-academicos.component.html
+++ b/src/app/UI/view-models/grados-academicos/grados-academicos.component.html
@@ -1,9 +1,9 @@
 <div class="col-9">
 
-    <div class="header">
+    <!-- <div class="header">
         <h1>Matemáticas</h1>
         <p>{{type_user}}. ¡Mejora en matemáticas con más fluidez y confianza! Con ABC Team, los estudiantes logran dominar competencias clave a su propio ritmo mediante ejercicios amenos e interactivos.</p>
-    </div>
+    </div> -->
     <div class="row1-container" *ngFor="let item of collection">
         <!-- <div class="box box-down cyan">
         <h2>Supervisor</h2>
