--- a/src/app/UI/common/navbar/navbar.component.html
+++ b/src/app/UI/common/navbar/navbar.component.html
@@ -1,9 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" *ngIf="user$ | async as user; else login">
-    <a class="navbar-brand" href="#" style="margin-left: 2%;">E-LEARNING PLATFORM</a>
+    <a class="navbar-brand" href="#" style="margin-left: 2%;"> <img src="../../../../favicon.ico" alt="E-Learning" style="width: 20px;"> -LEARNING PLATFORM</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarText" style="margin-left: 30%;" *ngIf="!isStudent">
+    <button type="button" class="btn btn-success" (click)="changeProfile()" style="margin-left: 60vw;">Cambiar Perfil</button>
+
+    <div class="collapse navbar-collapse" id="navbarText" *ngIf="!isStudent">
         <!-- <a style="color: #fff">{{ user$ | async | json }}</a> -->
         <ul class="navbar-nav mx-auto">
             <!-- <li class="nav-item active">
@@ -16,14 +18,14 @@
                 <a class="nav-link" routerLink="/grados-academicos/Docente" *ngIf="user">Grados</a>
             </li> -->
             <li class="nav-item" *ngIf="user">
-                <a href="#" class="nav-link" (click)="onLogout()">LogOut</a>
+                <a href="#" class="nav-link" (click)="onLogout()" style="margin-left: 0px !important;">LogOut</a>
             </li>
             <!-- <li class="nav-item">
                 <a class="nav-link">{{ user?.email}}</a>
             </li> -->
         </ul>
     </div>
-    <div class="collapse navbar-collapse" id="navbarText" style="margin-left: 30%;" *ngIf="isStudent">
+    <div class="collapse navbar-collapse" id="navbarText" *ngIf="isStudent">
         <!-- <a style="color: #fff">{{ user$ | async | json }}</a> -->
         <ul class="navbar-nav mx-auto">
             <li class="nav-item active">
@@ -40,7 +42,6 @@
             </li> -->
         </ul>
     </div>
-    <button type="button" class="btn btn-success" (click)="changeProfile()">Cambiar Perfil</button>
 </nav>
 
 <ng-template #login>
