--- a/src/app/UI/view-models/administrar-usuarios/administrar-usuarios.component.scss
+++ b/src/app/UI/view-models/administrar-usuarios/administrar-usuarios.component.scss
@@ -1,7 +1,7 @@
 .col-9 {
-    margin-left: 24vw !important;
+    margin-left: 25vw !important;
     margin-top: -45vw !important;
     height: 40vw !important;
     position: absolute;
-    overflow-x: auto;
+    width: 73% !important;
 }
