--- a/src/app/UI/view-models/home/home.component.scss
+++ b/src/app/UI/view-models/home/home.component.scss
@@ -136,5 +136,6 @@
     margin-top: -45vw !important;
     height: 40vw !important;
     position: absolute;
-    overflow-x: auto;
+    overflow-x: hidden !important;
+    overflow-y: hidden !important;
 }
