--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,4 +25,7 @@ h1 {
     margin-left: 24vw !important;
     margin-top: -45vw !important;
     height: 40vw !important;
+    position: absolute;
+    overflow-x: hidden !important;
+    overflow-y: scroll !important;
 }
