--- a/src/app/UI/common/sidebar/sidebar.component.html
+++ b/src/app/UI/common/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="col-3" *ngIf="user$ | async as user; else login">
+<div class="col-2" *ngIf="user$ | async as user; else login">
     <nav id="sidebar" class="navbar sticky-top">
         <div class="navbar-header">
             <img src="../../../../favicon.ico" class="rounded-circle" alt="Profile picture">
@@ -8,31 +8,32 @@
         <ul class="navbar-nav">
             <li class="nav-item active">
                 <a routerLink="/" *ngIf="user" class="nav-link btn btn-block btn-lg">
-                    <i class="fas fa-newspaper fa-lg mr-1"></i>
+                    <i class="fa fa-home" style="color: white;"></i>
                     <span>Inicio</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a routerLink="/administrar-usuarios" *ngIf="user" class="nav-link btn btn-block btn-lg">
-                    <i class="fas fa-address-book"></i>
-                    <span>Administrar usuarios</span>
+                    <i class="fa fa-users" style="color: white;"></i>
+                    <span>Usuarios</span>
                     <span class="badge badge-pill green d-flex align-items-center justify-content-center">14</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a routerLink="/grados-academicos/Estudiante" *ngIf="user" class="nav-link btn btn-block btn-lg">
-                    <i class="fas fa-file-alt fa-lg mr-1"></i>
+                    <i class="fa fa-graduation-cap" style="color: white;"></i>
+
+                    <!-- <i class="fa fa-users" style="color: white;"></i> -->
                     <span>Grados</span>
                     <span class="badge badge-pill green d-flex align-items-center justify-content-center">6</span>
                 </a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a href="./attendance.html" class="nav-link btn btn-block btn-lg">
-                    <i class="far fa-user-circle fa-lg mr-1"></i>
                     <span>Attendance</span>
                     <span class="badge red d-flex align-items-center justify-content-center">New</span>
                 </a>
-            </li>
+            </li> -->
         </ul>
     </nav>
 </div>
