--- a/src/app/UI/view-models/home/home.component.scss
+++ b/src/app/UI/view-models/home/home.component.scss
@@ -124,6 +124,7 @@
 }
 
 .content .card {
+    left: 17vw;
     margin-bottom: 30px;
     min-width: 300px;
     width: 60%;
@@ -132,7 +133,7 @@
 }
 
 .col-9 {
-    margin-left: 24vw !important;
+    margin-left: 18vw !important;
     margin-top: -45vw !important;
     height: 40vw !important;
     position: absolute;
