--- a/src/app/UI/view-models/responder-preguntas/responder-preguntas.component.scss
+++ b/src/app/UI/view-models/responder-preguntas/responder-preguntas.component.scss
@@ -1,7 +1,8 @@
 .col-9 {
-    margin-left: 24vw !important;
+    margin-left: 18vw !important;
     margin-top: -45vw !important;
     height: 40vw !important;
+    width: 80% !important;
     position: absolute;
     overflow-x: hidden !important;
     overflow-y: scroll !important;
