--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,9 +22,10 @@ h1 {
 }
 
 .col-9 {
-    margin-left: 24vw !important;
+    margin-left: 18vw !important;
     margin-top: -45vw !important;
     height: 40vw !important;
+    width: 80% !important;
     position: absolute;
     overflow-x: hidden !important;
     overflow-y: scroll !important;
