--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,7 +44,7 @@ body {
 }
 
 .card {
-    margin-left: 10vw !important;
+    margin-left: 0vw !important;
 }
 
 .card-header {
@@ -53,4 +53,12 @@ body {
 
 .card-footer {
     text-align: center !important;
+}
+
+.col-9 {
+    margin-left: 18vw !important;
+    margin-top: -45vw !important;
+    height: 40vw !important;
+    width: 80% !important;
+    position: absolute;
 }
