--- a/src/app/UI/view-models/login/login.component.html
+++ b/src/app/UI/view-models/login/login.component.html
@@ -1,27 +1,3 @@
-<!-- <br>
-<div class="card">
-    <div class="card-body">
-        <h2>Login</h2>
-        <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
-            <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter email" formControlName="email">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                    else.</small>
-            </div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" placeholder="Password" formControlName="password">
-            </div>
-            <div class="form-check">
-                <input type="checkbox" class="form-check-input">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>
-            <button type="submit" class="btn btn-primary">Login</button>
-        </form>
-    </div>
-</div> -->
-
 <link rel="stylesheet" type="text/css" id="applicationStylesheet" href="./login.component.scss" />
 
 <div id="v_doc_login" class="v_doc_login_Class">
@@ -73,3 +49,7 @@
 
     </div>
 </div>
+
+<!-- <ng-template #login-alumno>
+
+</ng-template> -->
