--- a/src/app/UI/common/navbar/navbar.component.html
+++ b/src/app/UI/common/navbar/navbar.component.html
@@ -32,7 +32,7 @@
         <button type="button" class="btn btn-success" (click)="changeProfile()" style="margin-left: 12vw;" alt="Cambiar Perfil"><i alt="Cambiar Perfil" class="fa fa-exchange" style="color: white;"></i> </button>
         <ul class="navbar-nav mx-auto">
             <li class="nav-item active">
-                <a class="nav-link" routerLink="/" *ngIf="user">Home</a>
+                <a class="nav-link" routerLink="/inicio" *ngIf="user">Home</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" routerLink="/grados-academicos/Estudiante" *ngIf="user">Grados</a>
