--- a/src/app/UI/view-models/grados-academicos/grados-academicos.component.html
+++ b/src/app/UI/view-models/grados-academicos/grados-academicos.component.html
@@ -27,7 +27,7 @@
             <h2>Grado {{item.grado}}</h2>
             <h3>Nivel {{item.nivel}}</h3>
             <p>Incluye: Contar hacia delante y hacia atrás: hasta 100|Trucos de suma: sumas hasta 10|Hallar un número usando sumas: sumas hasta 10|Completar la suma: sumas hasta 10</p>
-            <p class="card__apply" (click)="navigateCursos(item.id, type_user)"><a>Ver las competencias<i class="fas fa-arrow-right"></i></a></p>
+            <p class="card__apply" (click)="navigateCursos(item.id, type_user)"><a>Ver las competencias<i class="fa fa-edit"></i></a></p>
         </div>
     </div>
 </div>
