--- a/src/app/UI/view-models/inicio/inicio.component.html
+++ b/src/app/UI/view-models/inicio/inicio.component.html
@@ -1,3 +1,22 @@
 <div class="col-9">
+    <div style="background-color: red; height: 100%;">
+        <div class="row">
 
+            <div class="col-11 ml-4 mt-4 mb-2" style="background-color: white; margin-left: 5.5vw; width: 70%;">
+                Alumno
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-11 ml-4 mt-2" style="background-color: white; margin-left: 5.5vw; width: 70%; height: 33vw;">
+                Temas
+                <div class="row">
+
+                    <div class="col-4"> TEMA 1</div>
+                    <div class="col-4"> TEMA 2</div>
+                    <div class="col-4"> TEMA 3</div>
+                    <div class="col-4"> TEMA 4</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
