--- a/src/app/UI/view-models/administrar-preguntas/administrar-preguntas.component.html
+++ b/src/app/UI/view-models/administrar-preguntas/administrar-preguntas.component.html
@@ -1,31 +1,34 @@
-<div class="header">
-    <h1>{{name_subtema}}</h1>
-    <div class="row">
-        <div class="col-sm-10">
-            <p></p>
-        </div>
-        <div class="col-sm-2">
-            <button style="background-color: hsl(180, 62%, 55%) !important" type="button" class="btn btn-success" (click)="openSave(content)">Agregar</button>
+<div class="col-9">
+
+    <div class="header">
+        <h1>{{name_subtema}}</h1>
+        <div class="row">
+            <div class="col-sm-10">
+                <p></p>
+            </div>
+            <div class="col-sm-2">
+                <button style="background-color: hsl(180, 62%, 55%) !important" type="button" class="btn btn-success" (click)="openSave(content)">Agregar</button>
+            </div>
         </div>
     </div>
-</div>
 
-<div class="row1-container" *ngFor="let item of collection">
-    <div class="box cyan">
-        <img src="https://assets.codepen.io/2301174/icon-supervisor.svg" alt="">
-        <p>Pregunta: {{item.pregunta}}</p>
-        <p>Descripcion: {{item.descripcion}}</p>
-        <p>Alternativas: {{item.alternativas}}</p>
-        <p>Respuesta: {{item.respuesta}}</p>
-        <div class="row">
-            <div class="col-sm-2">
-                <p class="card__apply" (click)="openEditar(content, item)"><a>Editar<i class="fas fa-arrow-right"></i></a></p>
-            </div>
-            <!-- <div class="col-sm-3">
+    <div class="row1-container" *ngFor="let item of collection">
+        <div class="box cyan">
+            <img src="https://assets.codepen.io/2301174/icon-supervisor.svg" alt="">
+            <p>Pregunta: {{item.pregunta}}</p>
+            <p>Descripcion: {{item.descripcion}}</p>
+            <p>Alternativas: {{item.alternativas}}</p>
+            <p>Respuesta: {{item.respuesta}}</p>
+            <div class="row">
+                <div class="col-sm-2">
+                    <p class="card__apply" (click)="openEditar(content, item)"><a>Editar<i class="fa fa-edit"></i></a></p>
+                </div>
+                <!-- <div class="col-sm-3">
                 <p class="card__apply" routerLink="/administrar-preguntas/{{item.id}}/{{item.subtema}}"><a>Ver los subtemas<i class="fas fa-arrow-right"></i></a></p>
             </div> -->
-            <div class="col-sm-6">
-                <button type="button" class="btn btn-danger" (click)="eliminar(item)">Eliminar</button>
+                <div class="col-sm-6">
+                    <button type="button" class="btn btn-danger" (click)="eliminar(item)">Eliminar</button>
+                </div>
             </div>
         </div>
     </div>
