--- a/src/app/UI/view-models/administrar-sub-temas/administrar-sub-temas.component.scss
+++ b/src/app/UI/view-models/administrar-sub-temas/administrar-sub-temas.component.scss
@@ -154,6 +154,7 @@ a:hover::after {
 .card__apply {
     grid-row: 4/5;
     align-self: center;
+    cursor: pointer;
 }
 
 .col-9 {
@@ -164,4 +165,8 @@ a:hover::after {
     position: absolute;
     overflow-x: hidden !important;
     overflow-y: scroll !important;
+}
+
+i {
+    margin-left: 10px;
 }
