--- a/src/app/UI/view-models/administrar-temas/administrar-temas.component.html
+++ b/src/app/UI/view-models/administrar-temas/administrar-temas.component.html
@@ -17,10 +17,10 @@
             <h2>{{item.tema}}</h2>
             <div class="row">
                 <div *ngIf="type_user!='Estudiante'" class="col-sm-2">
-                    <p class="card__apply" (click)="openEditar(content, item)"><a>Editar<i class="fas fa-arrow-right"></i></a></p>
+                    <p class="card__apply" (click)="openEditar(content, item)"><a>Editar<i style="margin-left: 10px;" class="fa fa-edit" ></i></a></p>
                 </div>
                 <div class="col-sm-3">
-                    <p class="card__apply" (click)="navigate(item.id, item.tema, type_user, item.orden)"><a>Ver los subtemas<i class="fas fa-arrow-right"></i></a></p>
+                    <p class="card__apply" (click)="navigate(item.id, item.tema, type_user, item.orden)"><a>Ver los subtemas<i style="margin-left: 10px;" class="fa fa-eye" ></i></a></p>
                 </div>
                 <!-- <div class="col-sm-6">
                 <button type="button" class="btn btn-danger" (click)="eliminar(item)">Eliminar</button>
