--- a/src/app/UI/view-models/responder-preguntas/responder-preguntas.component.html
+++ b/src/app/UI/view-models/responder-preguntas/responder-preguntas.component.html
@@ -1,5 +1,100 @@
+<script src="responder-preguntas.js"></script>
 <div class="col-9">
+    <div class="container">
+        <div id="stepper1" class="bs-stepper">
+            <div class="bs-stepper-header">
+                <div class="step" data-target="#test-l-1">
+                    <button class="step-trigger">
+                        <span class="bs-stepper-circle">1</span>
+                        <span class="bs-stepper-label">Email</span>
+                    </button>
+                </div>
+                <div class="line"></div>
+                <div class="step" data-target="#test-l-2">
+                    <button class="step-trigger">
+                        <span class="bs-stepper-circle">2</span>
+                        <span class="bs-stepper-label">Password</span>
+                    </button>
+                </div>
+                <div class="line"></div>
+                <div class="step" data-target="#test-l-3">
+                    <button class="step-trigger">
+                        <span class="bs-stepper-circle">3</span>
+                        <span class="bs-stepper-label">Validate</span>
+                    </button>
+                </div>
+            </div>
+            <div class="bs-stepper-content" style="padding: 0px !important;">
+                <form (ngSubmit)="onSubmit()">
+                    <div id="test-l-1" class="content">
+                        <div class="col-12" style="background-image: url(../../../../assets/fondo-nave.png); background-repeat: no-repeat; background-size: 90vw 47vw; background-position-x: -15vw; background-position-y: 0vw;">
+                            <div class="row" style="width: 79vw; margin-left: 0vw;">
+                                <div class="row">
+                                    <div class="col-5" style="background: white; border-radius: 10px; height: 11vw; padding: 1vw; margin-top: 2vw; margin-left: 2vw;width: 28vw;">
+                                        <div class="row" style="margin-left: 0vw;"> <span> FACTORIZACIONES Y OPERACIONES DECIMALES </span></div>
+                                        <div class="row">
+                                            <div class="col-1" style="margin-left: -2vw; width: 9vw;">
+                                                <h6 style=" transform: rotate(270deg); margin-top: 1.4vw; "> REGRESAR </h6>
+                                            </div>
+                                            <div class="col-1" style="width: 6vw; margin-left: -3vw;">
+                                                <div class="row">Unidad</div>
+                                                <div class="row">Tema</div>
+                                                <div class="row">Pregunta</div>
+                                                <div class="row">Nivel</div>
+                                            </div>
+                                            <div class="col-1" style="width: 17vw;">
+                                                <div class="row"><a href=``>Ver Aqui</a></div>
+                                                <div class="row">{{collection}}</div>
+                                                <div class="row">01</div>
+                                                <div class="row">FACIL</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-4" style="margin-left: 16vw; margin-top: 4vw; width: 24vw; ">
+                                        <div class="row">
+                                            <div class="col-2" style="width: 17vw;">
+                                                <h6 style="color: white; margin-top: 0.4vw;"> Tiempo Transcurrido: </h6>
+                                            </div>
+                                            <div class="col-1" style="width: 9vw;">
+                                                <countdown style="color: white; margin-left: -3vw; font-size: 20px; " [config]="{leftTime: 20} "></countdown>
 
-    <b>Gerson, aqui te voy a enviar la lista de subtemas y el orden en el que los mostraras</b>
-
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row " style="margin-top: 2vw;margin-bottom: 2vw; ">
+                                    <div class="col-12 ">
+                                        <div class="row " style="width: 100%; margin-top: 3vw; ">
+                                            <h1 style="font-size: 35px; color: white !important; text-align: center; font-weight: bolder; ">¿Cuál es la suma de 1.33 + 2.05?</h1>
+                                        </div>
+                                        <div class="row ">
+                                            <div class="row ">
+                                                <h5 style="width: 79vw; text-align: center; font-size: 40px; font-weight: bolder; color: white; "> 1.33 + 2.05</h5>
+                                            </div>
+                                            <div class="row " style="width: 79vw; "> <input type="text " class="item " style="width: 13vw; margin-left: 32.5vw; border-radius: 5px; border: solid 0px; "></div>
+                                        </div>
+                                        <div class="row " style="width: 13vw; margin-top: 2vw; ">
+                                            <button style="width: 13vw; margin-left: 32.5vw; background-color: #00CCF2; color: white; border: solid 0px; margin-top: 0.5vw; border-radius: 5px; "> 
+                                        <h5 style="font-size: 0.9rem; margin-top: 0.5vw; "> ENVIAR RESPUESTA </h5>
+                                    </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="test-l-2 " class="content ">
+                        <div class="form-group ">
+                            <label for="exampleInputPassword1 ">Password</label>
+                            <input type="password " class="form-control " id="exampleInputPassword1 " placeholder="Password " />
+                        </div>
+                        <button (click)="next() " class="btn btn-primary ">Next</button>
+                    </div>
+                    <div id="test-l-3 " class="content text-center ">
+                        <button type="submit " class="btn btn-primary mt-5 ">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
